rbac-best-practices-vpol/restrict-binding-system-groups/e2e/enforce-policy-assert.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  name: restrict-binding-system-groups
spec:
  validationActions:
    - Deny
